crates/neura/neura-consensus-qbft/build_errors.txt
warning: use of deprecated method `tempfile::TempDir::into_path`: use TempDir::keep()
   --> crates/storage/db/src/lib.rs:165:39
    |
165 |         builder.expect(ERROR_TEMPDIR).into_path()
    |                                       ^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: `reth-db` (lib) generated 1 warning
warning: use of deprecated method `tempfile::dir::TempDir::into_path`: use TempDir::keep()
  --> crates/storage/provider/src/test_utils/mod.rs:62:51
   |
62 |         StaticFileProvider::read_write(static_dir.into_path()).expect("static file provider"),
   |                                                   ^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: `reth-provider` (lib) generated 1 warning
   Compiling neura-consensus-qbft v0.1.0 (/home/peastew/src/neura-reth/crates/neura/neura-consensus-qbft)
warning: unused import: `reth_node_api::NodeTypesWithDB`
  --> crates/neura/neura-consensus-qbft/src/services.rs:16:5
   |
16 | use reth_node_api::NodeTypesWithDB;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0599]: no method named `base_fee_params` found for struct `Arc<ChainSpec>` in the current scope
   --> crates/neura/neura-consensus-qbft/src/services.rs:192:61
    |
192 |         let base_fee_per_gas: Option<u64> = self.chain_spec.base_fee_params(timestamp_seconds).map(|params| {
    |                                                             ^^^^^^^^^^^^^^^ field, not a method
    |
help: remove the arguments
    |
192 -         let base_fee_per_gas: Option<u64> = self.chain_spec.base_fee_params(timestamp_seconds).map(|params| {
192 +         let base_fee_per_gas: Option<u64> = self.chain_spec.base_fee_params.map(|params| {
    |
help: there is a method `base_fee_params_at_block` with a similar name
    |
192 |         let base_fee_per_gas: Option<u64> = self.chain_spec.base_fee_params_at_block(timestamp_seconds).map(|params| {
    |                                                                            +++++++++

For more information about this error, try `rustc --explain E0599`.
warning: `neura-consensus-qbft` (lib) generated 1 warning
error: could not compile `neura-consensus-qbft` (lib) due to 1 previous error; 1 warning emitted
